Updated Download Fanfics to show new Icons for Fanficiton Results
Updated Download Tagging Scrapping to accomodate new update for Tag Icons